# rollr

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: dices.rs  lib.rs  main.rs  throw.rs
