[package]
name = "rollr"
version = "0.2.0"
edition = "2024"
authors = ["s3b <craftandcode@icloud.com>"]
description = "A lightweight CLI tool and Rust library to roll RPG dice (e.g. 2D20) or flip a coin."
license = "MIT"
repository = "https://github.com/craft-and-code/rollr.git"
documentation = "https://docs.rs/rollr"
keywords = ["dice", "cli", "roll", "random", "rpg"]
rust-version = "1.85.0"

[dependencies]
rand = "0.9.0"
regex = "1.11.1"
